# Cuda-In-Computer-Vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
filters/: bilateral_filter.cpp
include/: Bitmap.h
include/convert/: rgb_to_gray.h
include/detectors/edge/cpu/: edge_detector.h
include/detectors/object/cpu/: object_detector.h
include/filters/cpu/: filters.h
motion-detection/: motion_detection.cpp
src/convert/cpu/: rgb_to_gray.cpp
src/detectors/edge/cpu/: edge_detector.cpp
src/detectors/edge/gpu/: laplacian_detector.cu  sobel_detector.cu
src/detectors/object/cpu/: object_detector.cpp
src/detectors/object/gpu/: object_detection.cu
src/filters/cpu/: filters.cpp
src/filters/gpu/: bilateral_filter.cu  gaussian_filter.cu  median_filter.cu
